# classic_forecasting

./: pyproject.toml  tp_time_series_co2.py
