[project]
name = "classic-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pmdarima>=2.0.4",
    "prophet>=1.2.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]
[tool.uv.extra-build-dependencies]
      pmdarima = ["numpy"]
